# slinefit

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  slinefit.cpp
tutorial/: sc_CDFS006664_P1M2Q4_P2M1Q4_003_1.fits  tutorial.md
